fix claimchunks